2019-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gradient.c (GradientImage): Gradient levels were still
	not spot-on.  Now they are.  Unfortunately, this necessitated
	re-generating reference test images based on gradient since the
	gradient output has changed a little bit more than the test error
	margins allow.

2019-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Test gradient image resource limits
	using the proper API.

	* magick/resource.c (ResourceInfinity): Fix definition of
	ResourceInfinity.  Due to parenthesis in the wrong place, the
	defined value was -1 rather than the maximum range value.  The
	effect of this is that GetMagickResource() would return -1 rather
	than the maximum range value for the return type as documented.
	Regression was added on Saturday, March 09, 2019 in the 1.3.32
	release via changeset 15927:a5318823758c.

	* tests/rwfile.c (main): Allow Ghostscript supported formats to be
	a bit lossy.

	* tests/rwblob.c (main): Allow Ghostscript supported formats to be
	a bit lossy.

	* magick/gradient.c (GradientImage): Compute blending alpha with
	double precision for more precision.

2019-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updates in preparation for 1.3.34 release.

2019-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with changes since the last GM release.

	* coders/png.c (png_read_raw_profile): Use size_t type to store
	profile length and 'nibbles'.  Use safer way to test for profile
	buffer overflow.
	(ReadOnePNGImage): Use size_t type to store 'ping_rowbytes',
	'length', and 'row_offset'.  Check png_pixels allocation for
	arithemetic overflow when computing the required allocation size.

	* coders/tiff.c (WriteNewsProfile): Use size_t type to store
	profile length.

	* coders/pict.c (WritePICTImage): Avoid 'alloc-size-larger-than'
	warning from GCC when allocating row_bytes.
