@@ -38,6 +38,10 @@
 <p>2019-12-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pcx.c (WritePCXImage): Fix heap overflow in PCX writer
+when bytes per line value overflows its 16-bit storage unit.
+Fixes SourceForge bug #619 &quot;heap-buffer-overflow in WritePCXImage&quot;
+reported by Suhwan Song.</li>
 <li>magick/gradient.c (GradientImage): Gradient levels were still
 not spot-on.  Now they are.  Unfortunately, this necessitated
 re-generating reference test images based on gradient since the
